# security-translocate

./: Cargo.toml  README.md
src/: bindings.rs  lib.rs  option.rs  result.rs
src/bindings/: app_launch_checkin.rs  create_generic.rs  create_original_path_for_url.rs  create_secure_directory_for_url.rs  delete_secure_directory.rs  is_translocated_url.rs  mod.rs  start_listening.rs  start_listening_with_options.rs  url_should_run_translocated.rs
src/internal/: annotations.rs  mod.rs  option.rs  result.rs
